// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-as0m4e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-196vuex-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1qw1a70-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-vyo9mr-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation css-gq5jh7-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-as0m4e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-196vuex-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1tkcs05-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-nvg5ci-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-q8ru1j-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-as0m4e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-196vuex-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1k1fg1d-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1mgpdqh-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-szhb3h-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-as0m4e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-196vuex-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1j2m48k-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-x5qdqu-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-yifhv8-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
